# my-rust-connector-kernel

./: Cargo.toml
src/: filesystem_scanner.rs  fltlib.rs  fs_index.rs  main.rs  nt_path_resolver.rs  path_normalizer.rs  query_interface.rs
src/comms/: api_server.rs  mod.rs  protocol.rs  transport.rs
src/kernel/: kernel_event_bridge.rs  mod.rs  policy.rs  port.rs
src/networking/: agent_server.rs  mod.rs  websocket_server.rs
src/policy/: kernel_adapter.rs  kernel_policy.rs  mod.rs  path_resolver.rs  policy_dry_run.rs  policy_engine.rs  policy_guard.rs  policy_intent.rs  policy_preview.rs  policy_store.rs
src/ui/: explorer_controller.rs  explorer_state.rs  interaction_rules.rs  mod.rs
