[package]
name = "my-rust-connector-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",

    "Win32_Storage_FileSystem",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]}

# Core utilities
log = "0.4"
env_logger = "0.11"
once_cell = "1.21.3"
ctrlc = "3.5.1"

# STEP 1: Filesystem Index
parking_lot = "0.12.5"
walkdir = "2.5.0"

# STEP 2: Communication Layer
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
tower = "0.4"

[[bin]]
name = "dlp-agent"
path = "src/main.rs"
